--- a/pom.xml
+++ b/pom.xml
@@ -106,6 +106,7 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <configuration>
+                    <imageName>borshchevskiy/invest-portfolio</imageName>
                     <excludes>
                         <exclude>
                             <groupId>org.projectlombok</groupId>
