--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -4,6 +4,7 @@ spring:
       date: iso
 
   datasource:
+#    url: jdbc:postgresql://172.17.0.2:5432/investportfolio_dev
     url: jdbc:postgresql://localhost:5432/investportfolio_dev
     username: postgres
     password: postgres
@@ -20,3 +21,8 @@ spring:
       hbm2ddl.auto: validate
     open-in-view: false
 
+logging:
+  level:
+    root: info
+  file:
+    path: logs
