--- a/src/main/resources/application-prod.yaml
+++ b/src/main/resources/application-prod.yaml
@@ -4,9 +4,9 @@ spring:
       date: iso
 
   datasource:
-    url: jdbc:postgresql://${PROD_DB_HOST}:${PROD_DB_PORT}/${PROD_DB_NAME}
-    username: ${PROD_DB_USERNAME}
-    password: ${PROD_DB_PASSWORD}
+    url: jdbc:postgresql://dpg-cfl4mfpa6gductitalv0-a:5432/investportfolio
+    username: investportfolio_user
+    password: 9VNStEKWY1TbxUdSqorby7MwnT6jUQ8Q
     driver-class-name: org.postgresql.Driver
 
   liquibase:
@@ -20,3 +20,8 @@ spring:
       hbm2ddl.auto: validate
     open-in-view: false
 
+logging:
+  level:
+    root: info
+  file:
+    path: logs
