--- a/pom.xml
+++ b/pom.xml
@@ -28,10 +28,6 @@
             <groupId>org.springframework.session</groupId>
             <artifactId>spring-session-core</artifactId>
         </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-tomcat</artifactId>
-        </dependency>
 
         <!--Templates-->
         <dependency>
@@ -110,6 +106,10 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <configuration>
+                    <profiles>
+                        <profile>dev</profile>
+                        <profile>prod</profile>
+                    </profiles>
                     <imageName>borshchevskiy/invest-portfolio</imageName>
                     <excludes>
                         <exclude>
