--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,7 @@ services:
 
   webapp:
     build: .
+    command: java -Dspring.profiles.active=docker -jar *.jar
     depends_on:
       - db
     ports:
