--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -25,3 +25,16 @@ logging:
     root: info
   file:
     path: logs
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health,prometheus,info,metric
+  metrics:
+    export:
+      prometheus:
+        enabled: true
+    distribution:
+      percentiles-histogram:
+        "[http.server.requests]": true
