--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -20,6 +20,10 @@ spring:
       hbm2ddl.auto: validate
     open-in-view: false
 
+  messages:
+    basename: messages
+    fallback-to-system-locale: false
+
 logging:
   level:
     root: info
